<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meal Plan Assistant</string>
    <string name="home_section_title">Home</string>
    <string name="info_section_title">Info</string>
    <string name="venue_section_title">Venues</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="meal_plan_option_title">Meal Plan</string>
    <string name="meal_plan_option_summary">Choose your meal plan</string>
    <string name="settings">Settings</string>
    <string name="reset_title">Reset Meals</string>
    <string name="reset_summary">Reset your meals for the week</string>
    <string name="use_a_meal">Use A Meal</string>
    <string name="remaining_meals">You have 14 meals remaining</string>
    <string-array name="dining_halls">
        <item>Upper Farinon</item>
        <item>Lower Farinon</item>
        <item>Marquis</item>
        <item>Gilbert\'s</item>
        <item>Simon\'s</item>
        <item>Skillman Cafe</item>
    </string-array>
	<string-array name="meal_plan_options">
	    <item>7</item>
        <item>14</item>
        <item>20</item>
	</string-array>
	<string name="menu_settings">Settings</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="rate_this_app_summary">Reviews and feedback are appreciated!</string>
    <string name="main_text_size">Text Size</string>
    <string name="visit_my_website">Visit My Website</string>
    <string name="visit_my_website_summary">For more apps and games by Bret Black</string>
    <string name="feedback_summary">This app is in beta - your feedback is appreciated</string>
	<string name="feedback_title">Feedback Form</string>
	<string name="reset_records_title">Reset Records</string>
	<string name="reset_records_summary">Reset the recorded venue frequency</string>
	<string name="schedule_title">Dining Schedule</string>
	<string name="schedule_content">
	    This app has been developed by Bret Black.  It is in a very early beta state.\n\nRight now, it is designed to help Lafayette College students manage their meal plans.  It will be expanded into something more general purpose later.\n\nVisit the dining services website\nhttp://lafayette.cafebonappetit.com/\n\nVisit my website\nhttp://bretblack.com</string>
	<color name="white">#FFFFFF</color>
</resources>
